{
  "version": 4,
  "terraform_version": "1.13.4",
  "serial": 83,
  "lineage": "79af8015-c1d0-fdbd-ecb3-148df1f113d8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04491daf0c6e65be9",
            "arn": "arn:aws:ec2:eu-west-1:686699774218:elastic-ip/eipalloc-04491daf0c6e65be9",
            "association_id": "eipassoc-089f3bcdc2163dc49",
            "domain": "vpc",
            "id": "eipalloc-04491daf0c6e65be9",
            "instance": "i-0c2800877243bebad",
            "network_border_group": "eu-west-1",
            "network_interface": "eni-0c284bb74a0268d48",
            "private_dns": "ip-10-20-1-196.eu-west-1.compute.internal",
            "private_ip": "10.20.1.196",
            "public_dns": "ec2-52-50-62-205.eu-west-1.compute.amazonaws.com",
            "public_ip": "52.50.62.205",
            "public_ipv4_pool": "amazon",
            "region": "eu-west-1",
            "tags": {
              "Env": "dev",
              "ManagedBy": "Terraform",
              "Name": "EIP-Frontend-Chinmayee",
              "Owner": "Chinmayee",
              "Project": "IRONHACK-PROJECT-1-Chinmayee"
            },
            "tags_all": {
              "Env": "dev",
              "ManagedBy": "Terraform",
              "Name": "EIP-Frontend-Chinmayee",
              "Owner": "Chinmayee",
              "Project": "IRONHACK-PROJECT-1-Chinmayee"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0db93b01769a44861",
            "arn": "arn:aws:ec2:eu-west-1:686699774218:elastic-ip/eipalloc-0db93b01769a44861",
            "association_id": "eipassoc-0ac864150fac53316",
            "domain": "vpc",
            "id": "eipalloc-0db93b01769a44861",
            "network_border_group": "eu-west-1",
            "network_interface": "eni-0bfc2865f62e05801",
            "private_dns": "ip-10-20-1-49.eu-west-1.compute.internal",
            "private_ip": "10.20.1.49",
            "public_dns": "ec2-63-35-115-138.eu-west-1.compute.amazonaws.com",
            "public_ip": "63.35.115.138",
            "public_ipv4_pool": "amazon",
            "region": "eu-west-1",
            "tags": {
              "Env": "dev",
              "ManagedBy": "Terraform",
              "Name": "EIP-NAT-Chinmayee",
              "Owner": "Chinmayee",
              "Project": "IRONHACK-PROJECT-1-Chinmayee"
            },
            "tags_all": {
              "Env": "dev",
              "ManagedBy": "Terraform",
              "Name": "EIP-NAT-Chinmayee",
              "Owner": "Chinmayee",
              "Project": "IRONHACK-PROJECT-1-Chinmayee"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-090040d7b50c38b83",
            "arn": "arn:aws:ec2:eu-west-1:686699774218:instance/i-04cf0e8a4d4b1f64b",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04cf0e8a4d4b1f64b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "key-chinmayee-eu-west-1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-09a306b277c511886"
              }
            ],
            "primary_network_interface_id": "eni-09a306b277c511886",
            "private_dns": "ip-10-20-2-165.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.20.2.165",
            "region": "eu-west-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0db8c073dc4de9f62",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-000046487a77c7df8",
            "tags": {
              "Env": "dev",
              "ManagedBy": "Terraform",
              "Name": "EC2-Backend-Chinmayee",
              "Owner": "Chinmayee",
              "Project": "IRONHACK-PROJECT-1-Chinmayee"
            },
            "tags_all": {
              "Env": "dev",
              "ManagedBy": "Terraform",
              "Name": "EC2-Backend-Chinmayee",
              "Owner": "Chinmayee",
              "Project": "IRONHACK-PROJECT-1-Chinmayee"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e808307ba8c9a711"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "686699774218",
            "id": "i-04cf0e8a4d4b1f64b",
            "region": "eu-west-1"
          },
          "dependencies": [
            "aws_security_group.backend",
            "aws_security_group.frontend",
            "aws_subnet.private_app",
            "aws_vpc.main",
            "data.aws_ami.amazon_linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-090040d7b50c38b83",
            "arn": "arn:aws:ec2:eu-west-1:686699774218:instance/i-0514977ee91d07889",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0514977ee91d07889",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "key-chinmayee-eu-west-1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-08d93e3b60a1d397b"
              }
            ],
            "primary_network_interface_id": "eni-08d93e3b60a1d397b",
            "private_dns": "ip-10-20-3-87.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.20.3.87",
            "region": "eu-west-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0015138daec3aa484",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0084fcd87da415173",
            "tags": {
              "Env": "dev",
              "ManagedBy": "Terraform",
              "Name": "EC2-DB-Chinmayee",
              "Owner": "Chinmayee",
              "Project": "IRONHACK-PROJECT-1-Chinmayee"
            },
            "tags_all": {
              "Env": "dev",
              "ManagedBy": "Terraform",
              "Name": "EC2-DB-Chinmayee",
              "Owner": "Chinmayee",
              "Project": "IRONHACK-PROJECT-1-Chinmayee"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ddc0a0847605e9cf"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "686699774218",
            "id": "i-0514977ee91d07889",
            "region": "eu-west-1"
          },
          "dependencies": [
            "aws_security_group.backend",
            "aws_security_group.db",
            "aws_security_group.frontend",
            "aws_subnet.private_db",
            "aws_vpc.main",
            "data.aws_ami.amazon_linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-090040d7b50c38b83",
            "arn": "arn:aws:ec2:eu-west-1:686699774218:instance/i-0c2800877243bebad",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c2800877243bebad",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "key-chinmayee-eu-west-1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0c284bb74a0268d48"
              }
            ],
            "primary_network_interface_id": "eni-0c284bb74a0268d48",
            "private_dns": "ip-10-20-1-196.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.20.1.196",
            "public_dns": "ec2-52-50-62-205.eu-west-1.compute.amazonaws.com",
            "public_ip": "52.50.62.205",
            "region": "eu-west-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-036ee1716b475a72e",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ff2a283b2920365a",
            "tags": {
              "Env": "dev",
              "ManagedBy": "Terraform",
              "Name": "EC2-Frontend-Chinmayee",
              "Owner": "Chinmayee",
              "Project": "IRONHACK-PROJECT-1-Chinmayee"
            },
            "tags_all": {
              "Env": "dev",
              "ManagedBy": "Terraform",
              "Name": "EC2-Frontend-Chinmayee",
              "Owner": "Chinmayee",
              "Project": "IRONHACK-PROJECT-1-Chinmayee"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ed2463ceb9645f96"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "686699774218",
            "id": "i-0c2800877243bebad",
            "region": "eu-west-1"
          },
          "dependencies": [
            "aws_security_group.frontend",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.amazon_linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:686699774218:internet-gateway/igw-008d60514343c9cba",
            "id": "igw-008d60514343c9cba",
            "owner_id": "686699774218",
            "region": "eu-west-1",
            "tags": {
              "Env": "dev",
              "ManagedBy": "Terraform",
              "Name": "IGW-Chinmayee",
              "Owner": "Chinmayee",
              "Project": "IRONHACK-PROJECT-1-Chinmayee"
            },
            "tags_all": {
              "Env": "dev",
              "ManagedBy": "Terraform",
              "Name": "IGW-Chinmayee",
              "Owner": "Chinmayee",
              "Project": "IRONHACK-PROJECT-1-Chinmayee"
            },
            "vpc_id": "vpc-0dcd5d0cc837ce4f1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0db93b01769a44861",
            "association_id": "eipassoc-0ac864150fac53316",
            "connectivity_type": "public",
            "id": "nat-0ab390b01278bfd11",
            "network_interface_id": "eni-0bfc2865f62e05801",
            "private_ip": "10.20.1.49",
            "public_ip": "63.35.115.138",
            "region": "eu-west-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0ff2a283b2920365a",
            "tags": {
              "Env": "dev",
              "ManagedBy": "Terraform",
              "Name": "NATGW-Chinmayee",
              "Owner": "Chinmayee",
              "Project": "IRONHACK-PROJECT-1-Chinmayee"
            },
            "tags_all": {
              "Env": "dev",
              "ManagedBy": "Terraform",
              "Name": "NATGW-Chinmayee",
              "Owner": "Chinmayee",
              "Project": "IRONHACK-PROJECT-1-Chinmayee"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:686699774218:route-table/rtb-05c0ca7a752bfe235",
            "id": "rtb-05c0ca7a752bfe235",
            "owner_id": "686699774218",
            "propagating_vgws": [],
            "region": "eu-west-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0ab390b01278bfd11",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Env": "dev",
              "ManagedBy": "Terraform",
              "Name": "RT-Private-Chinmayee",
              "Owner": "Chinmayee",
              "Project": "IRONHACK-PROJECT-1-Chinmayee"
            },
            "tags_all": {
              "Env": "dev",
              "ManagedBy": "Terraform",
              "Name": "RT-Private-Chinmayee",
              "Owner": "Chinmayee",
              "Project": "IRONHACK-PROJECT-1-Chinmayee"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dcd5d0cc837ce4f1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "686699774218",
            "id": "rtb-05c0ca7a752bfe235",
            "region": "eu-west-1"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:686699774218:route-table/rtb-04aca6dd0fc12c80a",
            "id": "rtb-04aca6dd0fc12c80a",
            "owner_id": "686699774218",
            "propagating_vgws": [],
            "region": "eu-west-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-008d60514343c9cba",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Env": "dev",
              "ManagedBy": "Terraform",
              "Name": "RT-Public-Chinmayee",
              "Owner": "Chinmayee",
              "Project": "IRONHACK-PROJECT-1-Chinmayee"
            },
            "tags_all": {
              "Env": "dev",
              "ManagedBy": "Terraform",
              "Name": "RT-Public-Chinmayee",
              "Owner": "Chinmayee",
              "Project": "IRONHACK-PROJECT-1-Chinmayee"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dcd5d0cc837ce4f1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "686699774218",
            "id": "rtb-04aca6dd0fc12c80a",
            "region": "eu-west-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_app_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f24c68f5644d1ed9",
            "region": "eu-west-1",
            "route_table_id": "rtb-05c0ca7a752bfe235",
            "subnet_id": "subnet-000046487a77c7df8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private_app",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_db_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-048f63dfcbc49f39c",
            "region": "eu-west-1",
            "route_table_id": "rtb-05c0ca7a752bfe235",
            "subnet_id": "subnet-0084fcd87da415173"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private_db",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0428e3a8a4ce92358",
            "region": "eu-west-1",
            "route_table_id": "rtb-04aca6dd0fc12c80a",
            "subnet_id": "subnet-0ff2a283b2920365a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:686699774218:security-group/sg-0e808307ba8c9a711",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e808307ba8c9a711",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8081,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8081
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ed2463ceb9645f96"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ed2463ceb9645f96"
                ],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "SG-Backend-Chinmayee",
            "name_prefix": "",
            "owner_id": "686699774218",
            "region": "eu-west-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Env": "dev",
              "ManagedBy": "Terraform",
              "Name": "SG-Backend-Chinmayee",
              "Owner": "Chinmayee",
              "Project": "IRONHACK-PROJECT-1-Chinmayee"
            },
            "tags_all": {
              "Env": "dev",
              "ManagedBy": "Terraform",
              "Name": "SG-Backend-Chinmayee",
              "Owner": "Chinmayee",
              "Project": "IRONHACK-PROJECT-1-Chinmayee"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dcd5d0cc837ce4f1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "686699774218",
            "id": "sg-0e808307ba8c9a711",
            "region": "eu-west-1"
          },
          "dependencies": [
            "aws_security_group.frontend",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:686699774218:security-group/sg-0ddc0a0847605e9cf",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ddc0a0847605e9cf",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ed2463ceb9645f96"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e808307ba8c9a711",
                  "sg-0ed2463ceb9645f96"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "SG-DB-Chinmayee",
            "name_prefix": "",
            "owner_id": "686699774218",
            "region": "eu-west-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Env": "dev",
              "ManagedBy": "Terraform",
              "Name": "SG-DB-Chinmayee",
              "Owner": "Chinmayee",
              "Project": "IRONHACK-PROJECT-1-Chinmayee"
            },
            "tags_all": {
              "Env": "dev",
              "ManagedBy": "Terraform",
              "Name": "SG-DB-Chinmayee",
              "Owner": "Chinmayee",
              "Project": "IRONHACK-PROJECT-1-Chinmayee"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dcd5d0cc837ce4f1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "686699774218",
            "id": "sg-0ddc0a0847605e9cf",
            "region": "eu-west-1"
          },
          "dependencies": [
            "aws_security_group.backend",
            "aws_security_group.frontend",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:686699774218:security-group/sg-0ed2463ceb9645f96",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ed2463ceb9645f96",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8081,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8081
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "SG-Frontend-Chinmayee",
            "name_prefix": "",
            "owner_id": "686699774218",
            "region": "eu-west-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Env": "dev",
              "ManagedBy": "Terraform",
              "Name": "SG-Frontend-Chinmayee",
              "Owner": "Chinmayee",
              "Project": "IRONHACK-PROJECT-1-Chinmayee"
            },
            "tags_all": {
              "Env": "dev",
              "ManagedBy": "Terraform",
              "Name": "SG-Frontend-Chinmayee",
              "Owner": "Chinmayee",
              "Project": "IRONHACK-PROJECT-1-Chinmayee"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dcd5d0cc837ce4f1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "686699774218",
            "id": "sg-0ed2463ceb9645f96",
            "region": "eu-west-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:686699774218:subnet/subnet-000046487a77c7df8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.20.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-000046487a77c7df8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "686699774218",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-1",
            "tags": {
              "Env": "dev",
              "ManagedBy": "Terraform",
              "Name": "Subnet-Private-App-Chinmayee",
              "Owner": "Chinmayee",
              "Project": "IRONHACK-PROJECT-1-Chinmayee"
            },
            "tags_all": {
              "Env": "dev",
              "ManagedBy": "Terraform",
              "Name": "Subnet-Private-App-Chinmayee",
              "Owner": "Chinmayee",
              "Project": "IRONHACK-PROJECT-1-Chinmayee"
            },
            "vpc_id": "vpc-0dcd5d0cc837ce4f1"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "686699774218",
            "id": "subnet-000046487a77c7df8",
            "region": "eu-west-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:686699774218:subnet/subnet-0084fcd87da415173",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.20.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0084fcd87da415173",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "686699774218",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-1",
            "tags": {
              "Env": "dev",
              "ManagedBy": "Terraform",
              "Name": "Subnet-Private-DB-Chinmayee",
              "Owner": "Chinmayee",
              "Project": "IRONHACK-PROJECT-1-Chinmayee"
            },
            "tags_all": {
              "Env": "dev",
              "ManagedBy": "Terraform",
              "Name": "Subnet-Private-DB-Chinmayee",
              "Owner": "Chinmayee",
              "Project": "IRONHACK-PROJECT-1-Chinmayee"
            },
            "vpc_id": "vpc-0dcd5d0cc837ce4f1"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "686699774218",
            "id": "subnet-0084fcd87da415173",
            "region": "eu-west-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:686699774218:subnet/subnet-0ff2a283b2920365a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.20.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ff2a283b2920365a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "686699774218",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-1",
            "tags": {
              "Env": "dev",
              "ManagedBy": "Terraform",
              "Name": "Subnet-Public-Chinmayee",
              "Owner": "Chinmayee",
              "Project": "IRONHACK-PROJECT-1-Chinmayee"
            },
            "tags_all": {
              "Env": "dev",
              "ManagedBy": "Terraform",
              "Name": "Subnet-Public-Chinmayee",
              "Owner": "Chinmayee",
              "Project": "IRONHACK-PROJECT-1-Chinmayee"
            },
            "vpc_id": "vpc-0dcd5d0cc837ce4f1"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "686699774218",
            "id": "subnet-0ff2a283b2920365a",
            "region": "eu-west-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:686699774218:vpc/vpc-0dcd5d0cc837ce4f1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.20.0.0/16",
            "default_network_acl_id": "acl-0e879ae64aa4ca0c5",
            "default_route_table_id": "rtb-086bcf9485a9de4db",
            "default_security_group_id": "sg-0f225e379d75f88e9",
            "dhcp_options_id": "dopt-08c50754b344c373f",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0dcd5d0cc837ce4f1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-086bcf9485a9de4db",
            "owner_id": "686699774218",
            "region": "eu-west-1",
            "tags": {
              "Env": "dev",
              "ManagedBy": "Terraform",
              "Name": "VPC-Chinmayee",
              "Owner": "Chinmayee",
              "Project": "IRONHACK-PROJECT-1-Chinmayee"
            },
            "tags_all": {
              "Env": "dev",
              "ManagedBy": "Terraform",
              "Name": "VPC-Chinmayee",
              "Owner": "Chinmayee",
              "Project": "IRONHACK-PROJECT-1-Chinmayee"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "686699774218",
            "id": "vpc-0dcd5d0cc837ce4f1",
            "region": "eu-west-1"
          }
        }
      ]
    }
  ]
}